syntax = "proto2";

package project.datastore;

message LoadIntegersRequest {
  optional string input_file = 1;
  optional string delimiter = 2;
}

message LoadIntegersResponse {
  repeated int32 numbers = 1;
}

message StoreResultsRequest {
  optional string output_file = 1;
  repeated int64 results = 2;
}

message StoreResultsResponse {
  optional bool success = 1;
}

service DataStoreService {
  rpc LoadIntegers(LoadIntegersRequest)
      returns (LoadIntegersResponse);

  rpc StoreResults(StoreResultsRequest)
      returns (StoreResultsResponse);
}
